# song-credits

./: .env  .env.example  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 6bf8044879b3_create_initial_tables.py
backend/app/api/: dependencies.py  main.py  service.py
backend/app/api/models/: models.py
backend/app/api/routers/: credits.py  credits_network.py  playlists.py  utils.py
backend/app/clients/: adapter_base.py  client_base.py
backend/app/clients/spotify/: adapter.py  client.py  config.py
backend/app/clients/spotify/endpoints/: credits.py
backend/app/core/: config.py  database.py  helpers.py  logging.py  models.py  schemas.py  seed_data.py
backend/app/spotify_client/: spotify_client.py  spotify_config.py  spotify_service.py
