[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"

dependencies = [
  "fastapi[standard]<1.0.0,>=0.114.2",
  "sqlalchemy>=2.0",
  "pydantic>=2.0",
  "alembic<2.0.0,>=1.12.1",
  "psycopg[binary]<4.0.0,>=3.1.13",
  "pydantic-settings<3.0.0,>=2.2.1",
  "playwright<2.0.0,>=1.50.0",
  "requests<3.0.0,>=2.32.0",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "coverage<8.0.0,>=7.4.3",
]
